# BazelJvmLinters

./: .gitignore  README.md  WORKSPACE  dependencies.bzl
src/main/java/com/sample/app/: AndroidManifest.xml  BUILD.bazel  FirstFragment.java  MainActivity.java  SecondFragment.java
src/main/java/com/sample/app/res/layout/: activity_main.xml
src/main/java/com/sample/app/res/menu/: menu_main.xml
src/main/java/com/sample/app/res/navigation/: nav_graph.xml
src/main/java/com/sample/app/res/values/: strings.xml
src/main/java/com/sample/lib/ktgenerator/: BUILD.bazel  KtIntGenerator.kt
tools/lint/: checks.sh  code_style.bzl  defs.bzl
tools/lint/detekt/: BUILD.bazel  defs.bzl
tools/lint/google_java_format/: BUILD.bazel  defs.bzl
tools/lint/ktlint/: BUILD.bazel  defs.bzl
