load("@rules_jvm_external//:defs.bzl", "artifact")
load("//tools/build:android.bzl", "android_library", "android_binary")

package(default_visibility = ["//src:__subpackages__"])

android_library(
    name = "app_lib",
    srcs = glob([
        "**/*.java",
    ]),
    manifest = "AndroidManifest.xml",
    resource_files = glob(["res/**"]),
    deps = [
        "//src/main/java/com/sample/lib/ktgenerator",
        artifact("androidx.appcompat:appcompat"),
        artifact("androidx.fragment:fragment"),
        artifact("androidx.annotation:annotation"),
        artifact("androidx.navigation:navigation-fragment"),
        artifact("com.google.android.material:material"),
        artifact("androidx.constraintlayout:constraintlayout"),
    ],
)

android_binary(
    name = "app",
    manifest = "AndroidManifest.xml",
    deps = [":app_lib"]
)
